version/0.31/_sources/api/solver/_autosummary/settings/mesh_1_child.rst.txt
:orphan:

.. _mesh_1_child:

mesh_child
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.mesh_1_child
    :show-inheritance:

.. rubric:: Attributes

================================================================   ==============================================================================

Attribute                                                                                                                                 Summary

================================================================   ==============================================================================
:ref:`name <name_2>`                                                                                                          Name of the object.

:ref:`report_type <report_type>`                                       The report type; the list may vary on the selected report definition type.

:ref:`per_zone <per_zone>`                                                                                                      'per_zone' child.

:ref:`average_over <average_over>`                                                                                          'average_over' child.

:ref:`retain_instantaneous_values <retain_instantaneous_values>`                                             'retain_instantaneous_values' child.

:ref:`cell_zones <cell_zones_6>`                                                                                              'cell_zones' child.

:ref:`face_zones <face_zones>`                                                                                                'face_zones' child.

:ref:`physics <physics_1>`                                                                                                       'physics' child.

:ref:`output_parameter <output_parameter_1>`                                   Option to make report definition available as an output parameter.

================================================================   ==============================================================================

.. rubric:: Methods

========================================================   ======================================================================

Method                                                                                                                    Summary

========================================================   ======================================================================
:ref:`create_output_parameter <create_output_parameter>`       Option to make report definition available as an output parameter.

========================================================   ======================================================================

.. rubric:: Included in:

======================   ===============================

Parent                                           Summary

======================   ===============================
:ref:`mesh_1 <mesh_1>`       The report definition type.

======================   ===============================

