version/0.42/_sources/api/solver/_autosummary/settings/mesh_1_child.rst.txt
:orphan:

.. _mesh_1_child:

mesh_child
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.mesh_1_child
    :show-inheritance:

.. rubric:: Attributes

================================================================   ==============================================================================

Attribute                                                                                                                                 Summary

================================================================   ==============================================================================
:ref:`name <name_5>`                                                                                                          Name of the object.

:ref:`report_type <report_type>`                                       The report type; the list may vary on the selected report definition type.

:ref:`per_selection <per_selection>`                                                                                       'per_selection' child.

:ref:`average_over <average_over>`                                                                                          'average_over' child.

:ref:`retain_instantaneous_values <retain_instantaneous_values>`                                             'retain_instantaneous_values' child.

:ref:`cell_zones <cell_zones_8>`                                                                                              'cell_zones' child.

:ref:`face_zones <face_zones_2>`                                                                                              'face_zones' child.

:ref:`locations <locations_5>`                                                                                                 'locations' child.

:ref:`output_parameter <output_parameter_1>`                                   Option to make report definition available as an output parameter.

:ref:`create_report_file <create_report_file>`                                                   Create a new file set for the report definition.

:ref:`create_report_plot <create_report_plot>`                                                   Create a new plot set for the report definition.

================================================================   ==============================================================================

.. rubric:: Methods

========================================================   ======================================================================

Method                                                                                                                    Summary

========================================================   ======================================================================
:ref:`create_output_parameter <create_output_parameter>`       Option to make report definition available as an output parameter.

========================================================   ======================================================================

.. rubric:: Included in:

======================   ===============================

Parent                                           Summary

======================   ===============================
:ref:`mesh_1 <mesh_1>`       The report definition type.

======================   ===============================

